--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: tomcat_user
       POSTGRES_DB: tomcat_db
   web-server:
-    image: de1m0s/tomcat-compose:1.0
+    image: de1m0s/tomcat-compose:1.1
     environment:
       TOMCAT_DB_NAME: tomcat_db
       TOMCAT_DB_USER: tomcat_user
@@ -16,24 +16,19 @@ services:
       TOMCAT_DB_HOST: db
     ports:
       - "8001:8080"
-    depends_on:
-      - db
     links:
       - db
-  # nginx-proxy:
-  #   image: de1m0s/nginx-compose:1.0
-  #   environment:
-  #     NGINX_HOST: localhost
-  #     NGINX_PORT: 80
-  #     NGINX_PROXY_HOST: web-server
-  #     NGINX_PROXY_PORT: 8080
-  #     NGINX_STATIC_FOLDER: /var/data/
-  #   volumes:
-  #     - /home/denis/Projects/DutchTreat/Client/app:/var/data
-  #   ports:
-  #     - "80:80"
-  #   depends_on:
-  #     - web-server
-  #     - db
-  #   links:
-  #     - web-server
+  nginx-proxy:
+    image: de1m0s/nginx-compose:1.3
+    environment:
+      NGINX_HOST: localhost
+      NGINX_PORT: 80
+      NGINX_PROXY_HOST: web-server
+      NGINX_PROXY_PORT: 8080
+      NGINX_STATIC_FOLDER: /var/data/
+    volumes:
+      - /home/denis/Projects/DutchTreat/Client/app:/var/data
+    ports:
+      - "80:80"
+    links:
+      - web-server
