--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,24 +8,29 @@ services:
       POSTGRES_USER: tomcat_user
       POSTGRES_DB: tomcat_db
   web-server:
-    image: de1m0s/tomcat-compose:1.1
+    image: de1m0s/tomcat-compose:1.2
     environment:
       TOMCAT_DB_NAME: tomcat_db
       TOMCAT_DB_USER: tomcat_user
       TOMCAT_DB_PASSWORD: tomcat_password
       TOMCAT_DB_HOST: db
+      TOMCAT_USER: tomcat-admin
+      TOMCAT_PASSWORD: 12345678
     ports:
       - "8001:8080"
     links:
       - db
   nginx-proxy:
-    image: de1m0s/nginx-compose:1.3
+    image: de1m0s/nginx-compose:1.4
     environment:
       NGINX_HOST: localhost
       NGINX_PORT: 80
       NGINX_PROXY_HOST: web-server
       NGINX_PROXY_PORT: 8080
       NGINX_STATIC_FOLDER: /var/data/
+      NGINX_PROXY_LOCATION: /dutch-treat/app/api
+      NGINX_PROXY_PASS_LOCATION: dutch-treat/app/api
+      NGINX_REWRITE_BASE_HEADER: dutch-treat/app/
     volumes:
       - /home/denis/Projects/DutchTreat/Client/app:/var/data
     ports:
