--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: '2'
 services:
   db:
-    image: de1m0s/postgres-compose:1.0
+    image: de1m0s/postgres-compose:1.1
     container_name: tomcat-db-container
     environment:
       POSTGRES_PASSWORD: tomcat_password
       POSTGRES_USER: tomcat_user
       POSTGRES_DB: tomcat_db
+
   web-server:
-    image: de1m0s/tomcat-compose:1.2
+    image: de1m0s/tomcat-compose:1.3
     environment:
       TOMCAT_DB_NAME: tomcat_db
       TOMCAT_DB_USER: tomcat_user
@@ -16,10 +17,14 @@ services:
       TOMCAT_DB_HOST: db
       TOMCAT_USER: tomcat-admin
       TOMCAT_PASSWORD: 12345678
+      TOMCAT_JNDI_NAME: jdbc/mainDB
+      TOMCAT_EXTERNAL_FOLDER: /var/external-files/
+      TOMCAT_DUMPS_FOLDER: /var/external-files/dumps
     ports:
       - "8001:8080"
     links:
       - db
+      
   nginx-proxy:
     image: de1m0s/nginx-compose:1.4
     environment:
